# looks

./: .gitignore  README.md  explications.md  mock-dashboard-preview.html
backend/: ALEMBIC_EXPLANATION.md  DOCKER.md  Dockerfile  VERIFICATION_REPORT.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh  verify_imports.py
backend/alembic/: env.py
backend/alembic/versions/: 271f10e444ee_initial_migration.py  add_file_type_fields.py
backend/app/: __init__.py  db.py
backend/app/api/: assessment.py  auth.py  chat.py  courses.py  document_viewers.py  documents.py
backend/app/config/: __init__.py  ai.py  api.py  base.py  database.py  jwt.py  services.py
backend/app/models/: __init__.py  chunk.py  conversation.py  course.py  document.py  message.py  user.py
backend/app/schemas/: __init__.py  assessment.py  auth.py  chat.py  course.py  document.py  user.py
backend/app/services/: REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  chat_service.py  chunking_service.py  embedding_service.py  file_extraction_service.py  pdf_service.py  pptx_viewer_service.py  rag_service.py  vector_service.py
backend/app/services/assessment/: __init__.py  case_based_generator.py  find_mistake_generator.py  mcq_generator.py  open_ended_evaluator.py  prompts.py
backend/app/services/chat/: __init__.py  service.py  sources.py  streaming.py
backend/app/services/chunking/: __init__.py  chunker.py  repository.py
backend/app/services/documents/: __init__.py
backend/app/utils/: dependencies.py  security.py
backend/tests/: conftest.py  test_chat_citations.py  test_rag_service.py
(+113 files in other folders)
